--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@coreui/angular": "^4.2.18",
+    "@coreui/coreui": "^4.2.4",
+    "@coreui/icons-angular": "^4.2.15",
+    "ngx-wheel": "^4.0.5",
     "normalize.css": "^8.0.1",
     "rxjs": "~7.5.0",
     "svg-country-flags": "^1.2.10",
